force-app/main/default/objects/ConferenceForm__c/ConferenceForm__c.object-meta.xml
<CustomObject>
    <label>Conference Form</label>
    <nameField>
        <label>Conference Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conference Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>