force-app/main/default/objects/ConferenceForm__c/fields/A_La_Carte_Sponsor_Offerings__c.field-meta.xml
<CustomField>
    <fullName>A_La_Carte_Sponsor_Offerings__c</fullName>
    <description>A La Carte Sponsor Offerings (check all that apply):</description>
    <label>A La Carte Sponsor Offerings:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Room Sponsorship</fullName>
            </value>
            <value>
                <fullName>All Day Coffee Sponsorship</fullName>
            </value>
            <value>
                <fullName>Coffee Break Sponsorship</fullName>
            </value>
            <value>
                <fullName>Books for Audience</fullName>
            </value>
            <value>
                <fullName>Lunch Sponsorship</fullName>
            </value>
            <value>
                <fullName>Awards Ceremony</fullName>
            </value>
            <value>
                <fullName>Relaxation Station</fullName>
            </value>
            <value>
                <fullName>Resource Table Items</fullName>
            </value>
            <value>
                <fullName>Photobooth</fullName>
            </value>
            <value>
                <fullName>Interactive Display</fullName>
            </value>
            <value>
                <fullName>Attendee Bags</fullName>
            </value>
            <value>
                <fullName>Professional Headshots</fullName>
            </value>
            <value>
                <fullName>Art Show</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>