force-app/main/default/objects/ConferenceForm__c/fields/A_V_Other_Equipment__c.field-meta.xml
<CustomField>
    <fullName>A_V_Other_Equipment__c</fullName>
    <label>A/V Other Equipment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>