force-app/main/default/objects/ConferenceForm__c/fields/Active_NYS_Membership__c.field-meta.xml
<CustomField>
    <fullName>Active_NYS_Membership__c</fullName>
    <description>Do you have an active membership in the Network for Youth Success?</description>
    <label>Active NYS Membership?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>I&apos;d like to join</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>