force-app/main/default/objects/ConferenceForm__c/fields/Add_On_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Lunch__c</fullName>
    <label>Add On Lunch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>