force-app/main/default/objects/ConferenceForm__c/fields/All_Day_Coffee_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>All_Day_Coffee_Sponsorship__c</fullName>
    <label>All Day Coffee Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>