force-app/main/default/objects/ConferenceForm__c/fields/Art_Show__c.field-meta.xml
<CustomField>
    <fullName>Art_Show__c</fullName>
    <label>Art Show</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>