force-app/main/default/objects/ConferenceForm__c/fields/Assessevaluate_participants__c.field-meta.xml
<CustomField>
    <fullName>Assessevaluate_participants__c</fullName>
    <description>How will you assess/evaluate participants? (check all that apply):</description>
    <label>Assess/evaluate participants?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre/Post Test</fullName>
            </value>
            <value>
                <fullName>Self-Report</fullName>
            </value>
            <value>
                <fullName>Q&amp;A</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Other (describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>