force-app/main/default/objects/ConferenceForm__c/fields/Assigned_room_arrangement_comments__c.field-meta.xml
<CustomField>
    <fullName>Assigned_room_arrangement_comments__c</fullName>
    <description>If you are unable to present with your assigned room arrangement and would like us to reach out to you, please comment below.</description>
    <label>Assigned room arrangement comments:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>