force-app/main/default/objects/ConferenceForm__c/fields/Attendee_Bags__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Bags__c</fullName>
    <label>Attendee Bags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>