force-app/main/default/objects/ConferenceForm__c/fields/Award_Ceremony_Prizes__c.field-meta.xml
<CustomField>
    <fullName>Award_Ceremony_Prizes__c</fullName>
    <label>Award Ceremony Prizes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>