force-app/main/default/objects/ConferenceForm__c/fields/Awards_Ceremony__c.field-meta.xml
<CustomField>
    <fullName>Awards_Ceremony__c</fullName>
    <label>Awards Ceremony</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>