force-app/main/default/objects/ConferenceForm__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>Billing Address (if different than registrant)</description>
    <label>Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>