force-app/main/default/objects/ConferenceForm__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Billing City (if different than registrant)</description>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>