force-app/main/default/objects/ConferenceForm__c/fields/Billing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email_Address__c</fullName>
    <description>Billing Email Address (if different than registrant)</description>
    <label>Billing Email Address</label>
    <type>Email</type>
</CustomField>