force-app/main/default/objects/ConferenceForm__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>Billing State (if different than registrant)</description>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>