force-app/main/default/objects/ConferenceForm__c/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <description>Billing Zip Code (if different than registrant)</description>
    <label>Billing Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>