force-app/main/default/objects/ConferenceForm__c/fields/Books_for_Audience__c.field-meta.xml
<CustomField>
    <fullName>Books_for_Audience__c</fullName>
    <label>Books for Audience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>