force-app/main/default/objects/ConferenceForm__c/fields/Champion_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Champion_Sponsorship__c</fullName>
    <label>Champion Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>