force-app/main/default/objects/ConferenceForm__c/fields/Child_Submission_Names__c.field-meta.xml
<CustomField>
    <fullName>Child_Submission_Names__c</fullName>
    <label>Child Submission Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>