force-app/main/default/objects/ConferenceForm__c/fields/Co_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-Presenter</label>
    <type>Checkbox</type>
</CustomField>