force-app/main/default/objects/ConferenceForm__c/fields/Co_Presenter_Aspire_Trainer_ID__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter_Aspire_Trainer_ID__c</fullName>
    <description>Co-Presenter Aspire Trainer ID</description>
    <label>Co-Presenter Aspire Trainer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>