force-app/main/default/objects/ConferenceForm__c/fields/Co_presenter_email_address__c.field-meta.xml
<CustomField>
    <fullName>Co_presenter_email_address__c</fullName>
    <description>Co-presenter email address</description>
    <label>Co-presenter email address</label>
    <type>Email</type>
</CustomField>