force-app/main/default/objects/ConferenceForm__c/fields/Co_Presenter_holds_a_NYAEYC__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter_holds_a_NYAEYC__c</fullName>
    <description>The Co-Presenter holds a NYAEYC Training and Technical Assistance Professional Credential - Professional Development Specialist (PDS)</description>
    <label>Co-Presenter holds a NYAEYC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>