force-app/main/default/objects/ConferenceForm__c/fields/Co_Presenter_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter_Job_Title__c</fullName>
    <description>Co-Presenter Job Title</description>
    <label>Co-Presenter Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>