force-app/main/default/objects/ConferenceForm__c/fields/Co_Presenter_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter_Name__c</fullName>
    <description>Co-Presenter Name</description>
    <label>Co-Presenter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>