force-app/main/default/objects/ConferenceForm__c/fields/Co_Presenter_Organization__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter_Organization__c</fullName>
    <description>Co-Presenter Organization</description>
    <label>Co-Presenter Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>