force-app/main/default/objects/ConferenceForm__c/fields/Co_Presenter_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter_Phone_Number__c</fullName>
    <description>Co-Presenter Phone Number</description>
    <label>Co-Presenter Phone Number</label>
    <type>Phone</type>
</CustomField>