force-app/main/default/objects/ConferenceForm__c/fields/Coffee_Break_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Coffee_Break_Sponsorship__c</fullName>
    <label>Coffee Break Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>