force-app/main/default/objects/ConferenceForm__c/fields/Community_Schools_Conference_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Community_Schools_Conference_Ticket__c</fullName>
    <label>Community Schools Conference Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>