force-app/main/default/objects/ConferenceForm__c/fields/Community_Schools_Room_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Community_Schools_Room_Sponsorship__c</fullName>
    <label>Community Schools Room Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>