force-app/main/default/objects/ConferenceForm__c/fields/Conference_Dinner_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Conference_Dinner_Ticket__c</fullName>
    <label>Conference Dinner Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>