force-app/main/default/objects/ConferenceForm__c/fields/Conference_tickets__c.field-meta.xml
<CustomField>
    <fullName>Conference_tickets__c</fullName>
    <description>I&apos;d like the following conference ticket(s):</description>
    <label>Conference ticket(s):</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two Day Community Schools Wednesday April 30 - Thursday May 1 2025</fullName>
            </value>
            <value>
                <fullName>Site Visit Wednesday April 30 2025</fullName>
            </value>
            <value>
                <fullName>21st CCLC Friday May 2 2025</fullName>
            </value>
            <value>
                <fullName>School&apos;s Out Make it Count! Friday May 2 2025</fullName>
            </value>
            <value>
                <fullName>School&apos;s Out Make it Count! Saturday May 3 2025</fullName>
            </value>
            <value>
                <fullName>Two Day School&apos;s Out Make it Count! Friday May 2 2025 - Saturday May 3, 2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>