force-app/main/default/objects/ConferenceForm__c/fields/Core_Body_of_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Core_Body_of_Knowledge__c</fullName>
    <description>Core Body of Knowledge Areas Your Session Will Address (check all that apply):</description>
    <label>Core Body of Knowledge:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Child Growth &amp; Development</fullName>
            </value>
            <value>
                <fullName>(2) Family &amp; Community Relationships</fullName>
            </value>
            <value>
                <fullName>(3) Observation &amp; Assessment</fullName>
            </value>
            <value>
                <fullName>(4) Environment &amp; Curriculum</fullName>
            </value>
            <value>
                <fullName>(5) Health, Safety, &amp; Nutrition</fullName>
            </value>
            <value>
                <fullName>(6) Professionalism &amp; Leadership</fullName>
            </value>
            <value>
                <fullName>(7) Administration &amp; Leadership</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>I&apos;m unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>