force-app/main/default/objects/ConferenceForm__c/fields/Dietary_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_restrictions__c</fullName>
    <description>Do you have any dietary restrictions? (check all that apply):</description>
    <label>Dietary restrictions?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Gluten Free</fullName>
            </value>
            <value>
                <fullName>Pescatarian</fullName>
            </value>
            <value>
                <fullName>Lactose Intolerance</fullName>
            </value>
            <value>
                <fullName>Dairy Free</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Food Allergy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>