force-app/main/default/objects/ConferenceForm__c/fields/Food_AllergyOther_description__c.field-meta.xml
<CustomField>
    <fullName>Food_AllergyOther_description__c</fullName>
    <description>For Food Allergy and Other, please describe:</description>
    <label>Food Allergy/Other description:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>