force-app/main/default/objects/ConferenceForm__c/fields/Form_Response__c.field-meta.xml
<CustomField>
    <fullName>Form_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Response</label>
    <referenceTo>b3f__FormResponse__c</referenceTo>
    <relationshipLabel>Conference Forms</relationshipLabel>
    <relationshipName>Conference_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>