force-app/main/default/objects/ConferenceForm__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Conference Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor/Vendor</fullName>
            </value>
            <value>
                <fullName>Conference Awards</fullName>
            </value>
            <value>
                <fullName>Conference RFP</fullName>
            </value>
            <value>
                <fullName>Conference Registration</fullName>
            </value>
            <value>
                <fullName>Presenter Agreement</fullName>
            </value>
            <value>
                <fullName>Vendor Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>