force-app/main/default/objects/ConferenceForm__c/fields/Four_Day_Vendor_Non_Profit__c.field-meta.xml
<CustomField>
    <fullName>Four_Day_Vendor_Non_Profit__c</fullName>
    <label>Four Day Vendor (Non Profit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>