force-app/main/default/objects/ConferenceForm__c/fields/Full_Page_Ad__c.field-meta.xml
<CustomField>
    <fullName>Full_Page_Ad__c</fullName>
    <label>Full Page Ad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>