force-app/main/default/objects/ConferenceForm__c/fields/Half_Page_Ad__c.field-meta.xml
<CustomField>
    <fullName>Half_Page_Ad__c</fullName>
    <label>Half Page Ad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>