force-app/main/default/objects/ConferenceForm__c/fields/Hands_On_Track__c.field-meta.xml
<CustomField>
    <fullName>Hands_On_Track__c</fullName>
    <label>Hands On Track</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>