force-app/main/default/objects/ConferenceForm__c/fields/Host_Conference_Form__c.field-meta.xml
<CustomField>
    <fullName>Host_Conference_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Conference Form</label>
    <referenceTo>ConferenceForm__c</referenceTo>
    <relationshipLabel>Conference Forms</relationshipLabel>
    <relationshipName>Conference_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>