force-app/main/default/objects/ConferenceForm__c/fields/How_long_involved_with_Community_Schools__c.field-meta.xml
<CustomField>
    <fullName>How_long_involved_with_Community_Schools__c</fullName>
    <description>How long have you been involved with Community Schools?</description>
    <label>How long involved with Community Schools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Just getting started</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>4-6 years</fullName>
            </value>
            <value>
                <fullName>7-10 years</fullName>
            </value>
            <value>
                <fullName>Over 10 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>