force-app/main/default/objects/ConferenceForm__c/fields/I_am_available_to_present_on__c.field-meta.xml
<CustomField>
    <fullName>I_am_available_to_present_on__c</fullName>
    <description>I am available to present on.... (check all that apply):</description>
    <label>I am available to present on:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wednesday April 30 2025</fullName>
            </value>
            <value>
                <fullName>Thursday May 1 2025</fullName>
            </value>
            <value>
                <fullName>Friday May 2 2025</fullName>
            </value>
            <value>
                <fullName>Saturday May 3 2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>