force-app/main/default/objects/ConferenceForm__c/fields/I_hold_a_NYSAEYC_Training_etc__c.field-meta.xml
<CustomField>
    <fullName>I_hold_a_NYSAEYC_Training_etc__c</fullName>
    <description>I hold a NYSAEYC Training and Technical Assistance Professional (TTAP) Credential - Professional Development Specialist (PDS).</description>
    <label>I hold a NYSAEYC Training etc.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>