force-app/main/default/objects/ConferenceForm__c/fields/IndividualOrganization_to_be_invoiced__c.field-meta.xml
<CustomField>
    <fullName>IndividualOrganization_to_be_invoiced__c</fullName>
    <description>Name of Individual/Organization to be invoiced (if different than registrant)</description>
    <label>Individual/Organization to be invoiced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>