force-app/main/default/objects/ConferenceForm__c/fields/Instructional_methods_you_plan_to_use__c.field-meta.xml
<CustomField>
    <fullName>Instructional_methods_you_plan_to_use__c</fullName>
    <description>What are the instructional methods you plan to use? (check all that apply):</description>
    <label>Instructional methods you plan to use?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Scenarios</fullName>
            </value>
            <value>
                <fullName>Small Group Discussion</fullName>
            </value>
            <value>
                <fullName>Demonstration and Practice</fullName>
            </value>
            <value>
                <fullName>Task Exercises</fullName>
            </value>
            <value>
                <fullName>Games/Activities</fullName>
            </value>
            <value>
                <fullName>Power Point Presentation</fullName>
            </value>
            <value>
                <fullName>Hand Outs</fullName>
            </value>
            <value>
                <fullName>Q&amp;A</fullName>
            </value>
            <value>
                <fullName>Hands On Activities</fullName>
            </value>
            <value>
                <fullName>Reflection</fullName>
            </value>
            <value>
                <fullName>Large Group Discussion</fullName>
            </value>
            <value>
                <fullName>Role Play</fullName>
            </value>
            <value>
                <fullName>Lecture</fullName>
            </value>
            <value>
                <fullName>Panel Discussion</fullName>
            </value>
            <value>
                <fullName>Teach Back/Presentations</fullName>
            </value>
            <value>
                <fullName>Video/CD/DVD</fullName>
            </value>
            <value>
                <fullName>Other (describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>