force-app/main/default/objects/ConferenceForm__c/fields/Interactive_Display__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Display__c</fullName>
    <label>Interactive Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>