force-app/main/default/objects/ConferenceForm__c/fields/Invoice_Error__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Error__c</fullName>
    <label>Invoice Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>