force-app/main/default/objects/ConferenceForm__c/fields/Is_there_a_Co_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Co_Presenter__c</fullName>
    <description>Is there a Co-Presenter?</description>
    <label>Is there a Co-Presenter?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>