force-app/main/default/objects/ConferenceForm__c/fields/Leadership_Track__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Track__c</fullName>
    <label>Leadership Track</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>