force-app/main/default/objects/ConferenceForm__c/fields/Lunch_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Sponsorship__c</fullName>
    <label>Lunch Sponsorship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>