force-app/main/default/objects/ConferenceForm__c/fields/Makerspace_Table__c.field-meta.xml
<CustomField>
    <fullName>Makerspace_Table__c</fullName>
    <label>Makerspace Table</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>