force-app/main/default/objects/ConferenceForm__c/fields/My_registration_is_for_aan__c.field-meta.xml
<CustomField>
    <fullName>My_registration_is_for_aan__c</fullName>
    <description>My registration is for a/an:</description>
    <label>My registration is for a/an:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>