force-app/main/default/objects/ConferenceForm__c/fields/My_workshop_will_be__c.field-meta.xml
<CustomField>
    <fullName>My_workshop_will_be__c</fullName>
    <description>My workshop will be:</description>
    <label>My workshop will be:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 minutes long (speed session)</fullName>
            </value>
            <value>
                <fullName>90 minutes long</fullName>
            </value>
            <value>
                <fullName>I could make it work for either</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>