force-app/main/default/objects/ConferenceForm__c/fields/Needed_AV_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Needed_AV_Equipment__c</fullName>
    <description>I will need the following A/V Equipment (check all that apply):</description>
    <label>Needed A/V Equipment:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Microphone</fullName>
            </value>
            <value>
                <fullName>Speakers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>