force-app/main/default/objects/ConferenceForm__c/fields/Nominators_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Nominators_Email_Address__c</fullName>
    <description>Nominator&apos;s Email Address</description>
    <label>Nominator&apos;s Email Address</label>
    <type>Email</type>
</CustomField>